...


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/register_tv_go_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@string/font_roboto_regular"
        android:text="@string/register_already_have_an_account"
        android:textColor="@color/actionColor"
...
